--- a/boy.html
+++ b/boy.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-      <title>site de boy</title>
-  <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
 </head>
 <body>
-        <h1>Bienvenue sur le site de boy</h1>
-        <p>Ceci est une page dédiée à boy.</p>
+        
 </body>
+</html>
